fix: 修复mainlayout内容overflow问题

--- a/src/layouts/MainLayout.module.css
+++ b/src/layouts/MainLayout.module.css
@@ -3,4 +3,5 @@
 }
 .content {
   height: calc(100vh - 64px);
+  overflow: auto;
 }
